--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
+    "gasp": "^0.0.2",
     "gsap": "^3.14.2",
     "motion": "^12.34.2",
     "ogl": "^1.0.11",
